--- a/src/layouts/projects-item.html
+++ b/src/layouts/projects-item.html
@@ -210,7 +210,63 @@
             </div>
             <div class="page__footer">
                 <footer class="footer">
-
+                    <div class="footer__wrap container">
+                        <div class="footer__summary">
+                            <a class="footer__branding logo" href="#">
+                                ЕМКОМ - инженерная компания
+                            </a>
+                            <div class="footer__address">
+                                191014, г. Санкт-Петербург,<br>
+                                <span class="nobr">ул. Бабушкина</span>, <span class="nobr">д. 123, лит. ЕБ</span><br>
+                                <a class="link link--inverted-text-alike" href="mailto:sale@emkom.spb.ru">sale@emkom.spb.ru</a>
+                            </div>
+                            <div class="footer__legalities">
+                                <a class="link link--inverted-text-alike" href="#">ПОЛИТИКА КОНФИДЕНЦИАЛЬНОСТИ</a><br>
+                                <div class="footer__copyright">© 2024 Все права защищены</div>
+                            </div>
+                        </div>
+                        <div class="footer__contains">
+                            <div class="footer__column">
+                                <div class="footer__sub-heading">
+                                    <a class="link link--inverted-text-alike" href="#">О компании</a>
+                                </div>
+                                <div class="footer__nav">
+                                    <a class="footer__link" href="#">Производственная<br> деятельность</a>
+                                    <a class="footer__link" href="#">Документация</a>
+                                </div>
+                            </div>
+                            <div class="footer__column">
+                                <div class="footer__sub-heading">
+                                    <a class="link link--inverted-text-alike" href="#">Услуги</a>
+                                </div>
+                                <div class="footer__nav">
+                                    <a class="footer__link" href="#">Монтаж и проектирование<br> инженерных систем</a>
+                                    <a class="footer__link" href="#">Комплексное производство<br> модульных решений</a>
+                                </div>
+                            </div>
+                            <div class="footer__column">
+                                <div class="footer__sub-heading">
+                                    <a class="link link--inverted-text-alike" href="#">Проекты</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="footer__addition">
+                            <a class="footer__phone" href="tel:+78123894114">
+                                +7 (812) 389-41-14
+                            </a>
+                            <a class="footer__feedback" href="#">
+                                <svg class="footer__envelop" xmlns="http://www.w3.org/2000/svg" width="23" height="15" viewBox="0 0 23 15">
+                                    <path fill="#fff" d="M15.073 7.5 23 13.956V1.044L15.073 7.5Zm-3.551 2.9L9.269 8.543 1.3 15h20.402l-7.927-6.418-2.252 1.817ZM21.7 0H1.299l10.18 8.273L21.7 0ZM0 1.044v12.873l7.927-6.456L0 1.044Z" clip-rule="evenodd"/>
+                                </svg>
+                                Написать сообщение
+                            </a>
+                            <div class="footer__request">
+                                <a class="request-button" href="#">
+                                    Оставить заявку
+                                </a>
+                            </div>
+                        </div>
+                    </div>
                 </footer>
             </div>
         </div>
