--- a/src/styles/_company.css
+++ b/src/styles/_company.css
@@ -1,5 +1,6 @@
 .company {
     height: 682px;
+    background-color: #000261;
     background-image: url("../images/about/about-desktop-background@1x.jpg");
     background-size: cover;
     background-repeat: no-repeat;
