--- a/src/styles/_contacts.css
+++ b/src/styles/_contacts.css
@@ -60,6 +60,7 @@
                         width: 100%;
                         height: 100%;
                         object-fit: cover;
+                        background-color: var(--image-fallback);
                     }
 
                 .contacts__sub-heading {
