--- a/src/styles/_plant.css
+++ b/src/styles/_plant.css
@@ -4,6 +4,7 @@
     .plant__body {
         height: 592px;
         padding-top: 43px;
+        background-color: #1060BD;
         background-image: url("../images/plant/plant-desktop@1x.jpg");
         background-size: cover;
         background-repeat: no-repeat;
