--- a/src/styles/_service.css
+++ b/src/styles/_service.css
@@ -10,6 +10,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            background-color: var(--image-fallback);
         }
 
     .service__body {
