--- a/src/styles/_work.css
+++ b/src/styles/_work.css
@@ -13,6 +13,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            background-color: var(--image-fallback);
         }
 
         .work__preview::after {
