--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -103,7 +103,7 @@
                                 +7 (812) 389-41-14
                             </a>
                             <div class="menu__request">
-                                <a class="request-button" href="#">
+                                <a class="request-button mfp-handler" href="#request">
                                     Оставить заявку
                                 </a>
                             </div>
@@ -348,13 +348,29 @@
                                 Написать сообщение
                             </a>
                             <div class="footer__request">
-                                <a class="request-button" href="#">
+                                <a class="request-button mfp-handler" href="#request">
                                     Оставить заявку
                                 </a>
                             </div>
                         </div>
                     </div>
                 </footer>
+            </div>
+        </div>
+
+
+        <!-- .mfp -->
+        <div class="window mfp-hide" id="request">
+            <button class="window__close mfp-close" type="button">
+                Close
+            </button>
+            <div class="request">
+                <h2 class="request__heading">
+                    Magnific Popup!
+                </h2>
+                <div class="request__body">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequatur debitis eligendi fugiat provident sed, velit! At debitis dolore fuga ipsum laudantium nemo reiciendis temporibus voluptates? Ab, accusantium aspernatur cumque dicta ducimus eaque eius eos eum in maxime nihil nulla numquam velit. Accusamus, aliquid atque beatae culpa cupiditate fugiat iure iusto non odit pariatur quae saepe ullam voluptatibus.
+                </div>
             </div>
         </div>
 
