--- a/src/styles/_request.css
+++ b/src/styles/_request.css
@@ -1,21 +1,21 @@
-.login {
+.request {
     width: 440px;
     padding: 40px;
 }
-    .login__heading {
+    .request__heading {
         margin-top: 0;
         margin-bottom: 0;
         font-weight: inherit;
     }
 
-    .login__body {
+    .request__body {
         margin-top: 20px;
     }
 
 
 @media (width < 740px) {
 
-    .login {
+    .request {
         width: 100%;
         max-width: 440px;
     }
