--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -21,9 +21,9 @@
 /*@import url("_label.css");*/
 /*@import url("_helper.css");*/
 
-/*@import url("_mfp.css");*/
-/*@import url("_window.css");*/
-/*@import url("_login.css");*/
+@import url("_mfp.css");
+@import url("_window.css");
+@import url("_request.css");
 
 @import url("_certificates.css");
 @import url("_http-error.css");
