--- a/src/styles/_window.css
+++ b/src/styles/_window.css
@@ -3,8 +3,8 @@
     display: inline-block;
     vertical-align: top;
     text-align: left;
-    background-color: #FFFFFF;
-    border-radius: 4px;
+    background-color: #E6F5FF;
+    border-radius: 11px;
 }
     .window__close {
         position: absolute;
