--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -366,11 +366,43 @@
             </button>
             <div class="request">
                 <h2 class="request__heading">
-                    Magnific Popup!
+                    Заполните форму
                 </h2>
-                <div class="request__body">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut consequatur debitis eligendi fugiat provident sed, velit! At debitis dolore fuga ipsum laudantium nemo reiciendis temporibus voluptates? Ab, accusantium aspernatur cumque dicta ducimus eaque eius eos eum in maxime nihil nulla numquam velit. Accusamus, aliquid atque beatae culpa cupiditate fugiat iure iusto non odit pariatur quae saepe ullam voluptatibus.
+                <div class="request__description">
+                    Заявка вас ни к чему не обязывает!<br> Вы можете отказаться в любой момент
                 </div>
+                <form class="request__form">
+                    <div class="request__field">
+                        <label class="label" for="name">
+                            Введите имя
+                        </label>
+                        <div class="input">
+                            <input class="input__widget" type="text" placeholder="Иван" id="name">
+                        </div>
+                    </div>
+                    <div class="request__field">
+                        <label class="label" for="email">
+                            Введите E-mail
+                        </label>
+                        <div class="input">
+                            <input class="input__widget" type="email" placeholder="ivan@yandex.ru" id="email">
+                        </div>
+                    </div>
+                    <div class="request__field">
+                        <label class="label" for="email">
+                            Введите номер телефона
+                        </label>
+                        <div class="input">
+                            <input class="input__widget" type="tel" placeholder="+7 (812) 389-41-14" id="tel">
+                        </div>
+                    </div>
+                    <div class="request__submit">
+                        <button class="button button--submit" type="submit">Отправить заявку</button>
+                    </div>
+                    <div class="request__note">
+                        Мы свяжемся с вами в течении 15 минут
+                    </div>
+                </form>
             </div>
         </div>
 
