--- a/src/styles/_request.css
+++ b/src/styles/_request.css
@@ -1,17 +1,56 @@
 .request {
-    width: 440px;
-    padding: 40px;
+    width: 510px;
+    padding: 17px 56px 30px;
 }
     .request__heading {
         margin-top: 0;
         margin-bottom: 0;
-        font-weight: inherit;
+        font-weight: 600;
+        font-size: 28px;
+        line-height: 34px;
+        color: #0D25FF;
+        text-align: center;
     }
 
-    .request__body {
-        margin-top: 20px;
+    .request__description {
+        margin-top: 5px;
+        max-width: 320px;
+        margin-left: auto;
+        margin-right: auto;
+        font-size: 15px;
+        line-height: 20px;
+        color: #0F33A9;
+        text-align: center;
     }
 
+    .request__form {
+        margin-top: 22px;
+    }
+        .request__field {
+            margin-top: 20px;
+        }
+
+        .request__field:first-child {
+            margin-top: 0;
+        }
+
+        .request__submit {
+            margin-top: 49px;
+            max-width: 309px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+            .request__submit .button {
+                width: 100%;
+            }
+
+        .request__note {
+            margin-top: 18px;
+            font-size: 15px;
+            line-height: 20px;
+            color: #0F33A9;
+            text-align: center;
+        }
 
 @media (width < 740px) {
 
