--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -362,7 +362,9 @@
         <!-- .mfp -->
         <div class="window mfp-hide" id="request">
             <button class="window__close mfp-close" type="button">
-                Close
+                <svg class="window__cross" xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26">
+                    <path d="M11.584 12.998.27 24.31l1.414 1.414 11.314-11.313 11.314 11.313 1.414-1.414-11.314-11.313L25.726 1.684 24.312.27 12.998 11.583 1.684.27.27 1.684l11.314 11.314Z"/>
+                </svg>
             </button>
             <div class="request">
                 <h2 class="request__heading">
