--- a/src/styles/_input.css
+++ b/src/styles/_input.css
@@ -4,13 +4,13 @@
     .input__widget {
         vertical-align: top;
         width: 100%;
-        height: 50px;
-        padding: 11px 22px;
+        height: 56px;
+        padding: 16px 20px;
         background-color: #FFFFFF; /* reset grey background in some cases, such as <select> */
         background-clip: padding-box; /* hack for iOS to make box-shadow works (same as border-radius in the past) */
-        border: 2px solid var(--input-border);
+        border: none;
         outline: none;
-        border-radius: 4px;
+        border-radius: 0;
         font-family: inherit;
         font-size: 16px; /* not less than 16px (otherwise mobile browsers will zoom in on focus) */
         line-height: 24px;
@@ -32,7 +32,7 @@
 
     .input__widget:focus-visible {
         border-color: var(--input-border-hover-and-focus);
-        box-shadow: 0 0 0 1px var(--input-border-hover-and-focus);
+        box-shadow: 0 0 0 2px var(--input-border-hover-and-focus);
         transition: none;
     }
 
