--- a/src/styles/_label.css
+++ b/src/styles/_label.css
@@ -1,9 +1,9 @@
 .label {
     display: block; /* In case it is being followed by button or smaller input. We want it to be on a new line. */
     width: fit-content; /* Specify clickable area */
-    padding-bottom: 8px;
+    padding-bottom: 6px;
     font-weight: bold;
-    font-size: 18px;
-    line-height: 24px;
-    color: #333333;
+    font-size: 15px;
+    line-height: 20px;
+    color: #0F33A9;
 }
