--- a/src/styles/_window.css
+++ b/src/styles/_window.css
@@ -8,16 +8,16 @@
 }
     .window__close {
         position: absolute;
-        right: 10px !important;
-        top: 10px !important;
-        width: 44px;
-        height: 44px;
+        right: 0 !important;
+        top: 0 !important;
+        width: 60px;
+        height: 60px;
         text-indent: 200%;
         white-space: nowrap;
         overflow: hidden !important;
         opacity: 1;
     }
-        .window__close::after {
+        .window__cross {
             content: "";
             position: absolute;
             left: 0;
@@ -25,9 +25,11 @@
             right: 0;
             bottom: 0;
             margin: auto;
-            background-image: url("../vectors/cross.svg");
-            background-size: 16px 16px;
-            background-repeat: no-repeat;
-            background-position: center center;
+            width: 26px;
+            height: 26px;
+            fill: var(--action-color);
         }
 
+        .window__close:hover .window__cross {
+            fill: var(--action-color-hover);
+        }
