--- a/src/styles/_request.css
+++ b/src/styles/_request.css
@@ -52,6 +52,55 @@
             text-align: center;
         }
 
+
+@media (1850px <= width) {
+
+    .request {
+        width: 628px;
+        padding: 44px 80px 50px;
+    }
+        .request__heading {
+            font-size: 40px;
+            line-height: 49px;
+        }
+
+        .request__description {
+            margin-top: 35px;
+            font-size: 22px;
+            line-height: 28px;
+            max-width: none;
+        }
+
+        .request__form {
+            margin-top: 56px;
+        }
+            .request__field {
+                margin-top: 39px;
+                margin-left: auto;
+                margin-right: auto;
+                max-width: 440px;
+            }
+
+            .request__field:first-child {
+                margin-top: 0;
+            }
+
+            .request__submit {
+                margin-top: 57px;
+                max-width: 356px;
+            }
+                .request__submit .button {
+
+                }
+
+        .request__note {
+            margin-top: 23px;
+            font-size: 16px;
+            line-height: 24px;
+        }
+}
+
+
 @media (width < 740px) {
 
     .request {
