--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -371,7 +371,7 @@
                     Заполните форму
                 </h2>
                 <div class="request__description">
-                    Заявка вас ни к чему не обязывает!<br> Вы можете отказаться в любой момент
+                    Заявка вас ни к чему не обязывает!<br class="hide-on-smartphone"> Вы можете отказаться в любой момент
                 </div>
                 <form class="request__form">
                     <div class="request__field">
@@ -402,7 +402,7 @@
                         <button class="button button--submit" type="submit">Отправить заявку</button>
                     </div>
                     <div class="request__note">
-                        Мы свяжемся с вами в течении 15 минут
+                        Мы свяжемся с вами в течении 15&nbsp;минут
                     </div>
                 </form>
             </div>
