--- a/src/styles/_menu.css
+++ b/src/styles/_menu.css
@@ -39,6 +39,11 @@
                     text-decoration-color: #00F0FF;
                 }
 
+                .menu__link--current,
+                .menu__link--current:hover {
+                    color: #07F0FF;
+                }
+
                 .menu__sub-menu {
                     display: none;
                 }
