--- a/src/layouts/service.html
+++ b/src/layouts/service.html
@@ -115,15 +115,15 @@
                 <div class="solutions">
                     <div class="solutions__head">
                         <div class="solutions__features">
-                            <div class="solutions__category solutions__category--left">
+                            <a class="solutions__category solutions__category--left" href="#systems">
                                 Монтаж и проектирование<br> инженерных систем
-                            </div>
-                            <div class="solutions__category solutions__category--right">
-                                комплексное производство<br> модульных решений
-                            </div>
+                            </a>
+                            <a class="solutions__category solutions__category--right" href="#modules">
+                                Комплексное производство<br> модульных решений
+                            </a>
                         </div>
                         <div class="solutions__intro container">
-                            <h1 class="solutions__heading">
+                            <h1 class="solutions__heading" id="systems">
                                 Монтаж<br class="solutions__heading-line-break"> и проектирование инженерных систем
                             </h1>
                             <p class="solutions__description">
@@ -694,7 +694,7 @@
                     </div>
                     <div class="solutions__sub-section">
                         <div class="solutions__sub-head container">
-                            <h2 class="solutions__sub-heading">
+                            <h2 class="solutions__sub-heading" id="modules">
                                 Строительно-монтажные работы
                             </h2>
                             <div class="solutions__sub-description">
