--- a/src/styles/_footer.css
+++ b/src/styles/_footer.css
@@ -31,7 +31,7 @@
                 line-height: 14px;
             }
                 .footer__copyright {
-                    margin-top: 7px
+                    margin-top: 7px;
                 }
 
         .footer__contains {
