--- a/src/styles/_product.css
+++ b/src/styles/_product.css
@@ -129,7 +129,7 @@
 
     }
     .product__inner:hover .product__side--back {
-        transform: rotateY(179deg)
+        transform: rotateY(179deg);
     }
 
 
