--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -278,7 +278,7 @@
                                                     </a>
                                                 </div>
                                                 <div class="swiper-slide swiper-slide--07">
-                                                    <a class="work work--smaller work--new" href="#">
+                                                    <a class="work work--smaller work--new mfp-handler" href="#request">
                                                         <span class="work__add-project">Здесь возможен<br> ваш проект</span>
                                                         <span class="work__add-project-hover">Заказать</span>
                                                     </a>
