--- a/src/layouts/about.html
+++ b/src/layouts/about.html
@@ -164,6 +164,7 @@
                             carousel
                             carousel--js-init-stories
                             carousel--css-skin-stories
+                            carousel--css-default-bullets
                             carousel--css-default-arrow
                         ">
                             <div class="carousel__widget">
@@ -342,6 +343,7 @@
                             carousel
                             carousel--js-init-folder
                             carousel--css-skin-folder
+                            carousel--css-default-bullets
                             carousel--css-default-arrow
                         ">
                             <div class="carousel__widget">
@@ -391,39 +393,39 @@
                                                 >
                                             </a>
                                         </div>
-<!--                                        <div class="swiper-slide">-->
-<!--                                            <a class="certificate-preview" href="#">-->
-<!--                                                <img class="certificate-preview__image"-->
-<!--                                                     srcset="../temp/certificates-preview/certificate-preview-e@2x.jpg 2x"-->
-<!--                                                     src="../temp/certificates-preview/certificate-preview-e@1x.jpg"-->
-<!--                                                     width="546"-->
-<!--                                                     height="772"-->
-<!--                                                     alt=""-->
-<!--                                                >-->
-<!--                                            </a>-->
-<!--                                        </div>-->
-<!--                                        <div class="swiper-slide">-->
-<!--                                            <a class="certificate-preview" href="#">-->
-<!--                                                <img class="certificate-preview__image"-->
-<!--                                                     srcset="../temp/certificates-preview/certificate-preview-f@2x.jpg 2x"-->
-<!--                                                     src="../temp/certificates-preview/certificate-preview-f@1x.jpg"-->
-<!--                                                     width="546"-->
-<!--                                                     height="772"-->
-<!--                                                     alt=""-->
-<!--                                                >-->
-<!--                                            </a>-->
-<!--                                        </div>-->
-<!--                                        <div class="swiper-slide">-->
-<!--                                            <a class="certificate-preview" href="#">-->
-<!--                                                <img class="certificate-preview__image"-->
-<!--                                                     srcset="../temp/certificates-preview/certificate-preview-g@2x.jpg 2x"-->
-<!--                                                     src="../temp/certificates-preview/certificate-preview-g@1x.jpg"-->
-<!--                                                     width="546"-->
-<!--                                                     height="772"-->
-<!--                                                     alt=""-->
-<!--                                                >-->
-<!--                                            </a>-->
-<!--                                        </div>-->
+                                        <div class="swiper-slide">
+                                            <a class="certificate-preview" href="#">
+                                                <img class="certificate-preview__image"
+                                                     srcset="../temp/certificates-preview/certificate-preview-e@2x.jpg 2x"
+                                                     src="../temp/certificates-preview/certificate-preview-e@1x.jpg"
+                                                     width="546"
+                                                     height="772"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a class="certificate-preview" href="#">
+                                                <img class="certificate-preview__image"
+                                                     srcset="../temp/certificates-preview/certificate-preview-f@2x.jpg 2x"
+                                                     src="../temp/certificates-preview/certificate-preview-f@1x.jpg"
+                                                     width="546"
+                                                     height="772"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
+                                        <div class="swiper-slide">
+                                            <a class="certificate-preview" href="#">
+                                                <img class="certificate-preview__image"
+                                                     srcset="../temp/certificates-preview/certificate-preview-g@2x.jpg 2x"
+                                                     src="../temp/certificates-preview/certificate-preview-g@1x.jpg"
+                                                     width="546"
+                                                     height="772"
+                                                     alt=""
+                                                >
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
