--- a/src/styles/_showcase.css
+++ b/src/styles/_showcase.css
@@ -99,6 +99,7 @@
             padding-top: 50px;
             padding-bottom: 26px;
             background-color: #0D25FF;
+            color: #FFFFFF;
             overflow: hidden;
         }
 }
