--- a/src/layouts/projects-item.html
+++ b/src/layouts/projects-item.html
@@ -169,40 +169,164 @@
                             </div>
                         </div>
                         <div class="project__gallery">
-                            <div class="gallery">
-                                <div class="gallery__item">
-                                    <a class="thumbnail" href="#">
-                                        <img class="thumbnail__image"
-                                             srcset="../temp/projects-gallery/projects-gallery-a@2x.jpg 2x"
-                                             src="../temp/projects-gallery/projects-gallery-a@1x.jpg"
-                                             width="546"
-                                             height="458"
-                                             alt=""
-                                        >
-                                    </a>
+                            <div class="
+                                carousel
+                                carousel--js-init-gallery
+                                carousel--css-skin-gallery
+                                carousel--css-default-bullets
+                                carousel--css-default-arrow
+                            ">
+                                <div class="carousel__widget">
+                                    <div class="swiper">
+                                        <div class="swiper-wrapper">
+                                            <div class="swiper-slide">
+                                                <a class="thumbnail" href="#">
+                                                    <img class="thumbnail__image"
+                                                         srcset="../temp/projects-gallery/projects-gallery-a@2x.jpg 2x"
+                                                         src="../temp/projects-gallery/projects-gallery-a@1x.jpg"
+                                                         width="546"
+                                                         height="458"
+                                                         alt=""
+                                                    >
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="thumbnail" href="#">
+                                                    <img class="thumbnail__image"
+                                                         srcset="../temp/projects-gallery/projects-gallery-b@2x.jpg 2x"
+                                                         src="../temp/projects-gallery/projects-gallery-b@1x.jpg"
+                                                         width="546"
+                                                         height="458"
+                                                         alt=""
+                                                    >
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="thumbnail" href="#">
+                                                    <img class="thumbnail__image"
+                                                         srcset="../temp/projects-gallery/projects-gallery-c@2x.jpg 2x"
+                                                         src="../temp/projects-gallery/projects-gallery-c@1x.jpg"
+                                                         width="546"
+                                                         height="458"
+                                                         alt=""
+                                                    >
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="thumbnail" href="#">
+                                                    <img class="thumbnail__image"
+                                                         srcset="../temp/projects-gallery/projects-gallery-b@2x.jpg 2x"
+                                                         src="../temp/projects-gallery/projects-gallery-b@1x.jpg"
+                                                         width="546"
+                                                         height="458"
+                                                         alt=""
+                                                    >
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="thumbnail" href="#">
+                                                    <img class="thumbnail__image"
+                                                         srcset="../temp/projects-gallery/projects-gallery-c@2x.jpg 2x"
+                                                         src="../temp/projects-gallery/projects-gallery-c@1x.jpg"
+                                                         width="546"
+                                                         height="458"
+                                                         alt=""
+                                                    >
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="thumbnail" href="#">
+                                                    <img class="thumbnail__image"
+                                                         srcset="../temp/projects-gallery/projects-gallery-a@2x.jpg 2x"
+                                                         src="../temp/projects-gallery/projects-gallery-a@1x.jpg"
+                                                         width="546"
+                                                         height="458"
+                                                         alt=""
+                                                    >
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="thumbnail" href="#">
+                                                    <img class="thumbnail__image"
+                                                         srcset="../temp/projects-gallery/projects-gallery-b@2x.jpg 2x"
+                                                         src="../temp/projects-gallery/projects-gallery-b@1x.jpg"
+                                                         width="546"
+                                                         height="458"
+                                                         alt=""
+                                                    >
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="thumbnail" href="#">
+                                                    <img class="thumbnail__image"
+                                                         srcset="../temp/projects-gallery/projects-gallery-c@2x.jpg 2x"
+                                                         src="../temp/projects-gallery/projects-gallery-c@1x.jpg"
+                                                         width="546"
+                                                         height="458"
+                                                         alt=""
+                                                    >
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="thumbnail" href="#">
+                                                    <img class="thumbnail__image"
+                                                         srcset="../temp/projects-gallery/projects-gallery-b@2x.jpg 2x"
+                                                         src="../temp/projects-gallery/projects-gallery-b@1x.jpg"
+                                                         width="546"
+                                                         height="458"
+                                                         alt=""
+                                                    >
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="thumbnail" href="#">
+                                                    <img class="thumbnail__image"
+                                                         srcset="../temp/projects-gallery/projects-gallery-c@2x.jpg 2x"
+                                                         src="../temp/projects-gallery/projects-gallery-c@1x.jpg"
+                                                         width="546"
+                                                         height="458"
+                                                         alt=""
+                                                    >
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="thumbnail" href="#">
+                                                    <img class="thumbnail__image"
+                                                         srcset="../temp/projects-gallery/projects-gallery-b@2x.jpg 2x"
+                                                         src="../temp/projects-gallery/projects-gallery-b@1x.jpg"
+                                                         width="546"
+                                                         height="458"
+                                                         alt=""
+                                                    >
+                                                </a>
+                                            </div>
+                                            <div class="swiper-slide">
+                                                <a class="thumbnail" href="#">
+                                                    <img class="thumbnail__image"
+                                                         srcset="../temp/projects-gallery/projects-gallery-c@2x.jpg 2x"
+                                                         src="../temp/projects-gallery/projects-gallery-c@1x.jpg"
+                                                         width="546"
+                                                         height="458"
+                                                         alt=""
+                                                    >
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div class="gallery__item">
-                                    <a class="thumbnail" href="#">
-                                        <img class="thumbnail__image"
-                                             srcset="../temp/projects-gallery/projects-gallery-b@2x.jpg 2x"
-                                             src="../temp/projects-gallery/projects-gallery-b@1x.jpg"
-                                             width="546"
-                                             height="458"
-                                             alt=""
-                                        >
-                                    </a>
+                                <div class="carousel__pagination">
+
                                 </div>
-                                <div class="gallery__item">
-                                    <a class="thumbnail" href="#">
-                                        <img class="thumbnail__image"
-                                             srcset="../temp/projects-gallery/projects-gallery-c@2x.jpg 2x"
-                                             src="../temp/projects-gallery/projects-gallery-c@1x.jpg"
-                                             width="546"
-                                             height="458"
-                                             alt=""
-                                        >
-                                    </a>
-                                </div>
+                                <button class="carousel__button carousel__button--prev" type="button">
+                                    <svg class="carousel__chevron" width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M41.3609 52.271L43.0213 50.6129L27.4127 35.0019L43.0213 19.3933L41.3609 17.7305L24.0918 35.0019L41.3609 52.271Z"/>
+                                    </svg>
+                                </button>
+                                <button class="carousel__button carousel__button--next" type="button">
+                                    <svg class="carousel__chevron" width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M28.6411 17.7305L26.9806 19.3886L42.5893 34.9996L26.9806 50.6082L28.6411 52.271L45.9102 34.9996L28.6411 17.7305Z"/>
+                                    </svg>
+                                </button>
                             </div>
                         </div>
                     </div>
