--- a/src/styles/_project.css
+++ b/src/styles/_project.css
@@ -165,8 +165,7 @@
 @media (width < 740px) {
 
     .project {
-        /*padding-top: 3px;*/
-        /*padding-bottom: var(--bottom-padding);*/
+        overflow: hidden; /* обрезаем карусель */
     }
         .project__preview {
             height: 310px;
@@ -232,11 +231,11 @@
             flex-direction: column;
         }
             .project__wrap {
-                /*padding-top: 42px;*/
                 padding-bottom: 0;
             }
 
             .project__gallery {
+                margin-top: 16px;
                 order: -1;
             }
 }
