--- a/src/layouts/index.html
+++ b/src/layouts/index.html
@@ -342,7 +342,7 @@
                             <a class="footer__phone" href="tel:+78123894114">
                                 +7 (812) 389-41-14
                             </a>
-                            <a class="footer__feedback" href="#">
+                            <a class="footer__feedback mfp-handler" href="#feedback">
                                 <svg class="footer__envelop" xmlns="http://www.w3.org/2000/svg" width="23" height="15" viewBox="0 0 23 15">
                                     <path fill="#fff" d="M15.073 7.5 23 13.956V1.044L15.073 7.5Zm-3.551 2.9L9.269 8.543 1.3 15h20.402l-7.927-6.418-2.252 1.817ZM21.7 0H1.299l10.18 8.273L21.7 0ZM0 1.044v12.873l7.927-6.456L0 1.044Z" clip-rule="evenodd"/>
                                 </svg>
@@ -374,11 +374,56 @@
                 </div>
                 <form class="request__form">
                     <div class="request__field">
+                        <label class="label" for="request-name">
+                            Введите имя
+                        </label>
+                        <div class="input">
+                            <input class="input__widget" type="text" placeholder="Иван" id="request-name">
+                        </div>
+                    </div>
+                    <div class="request__field">
+                        <label class="label" for="request-email">
+                            Введите E-mail
+                        </label>
+                        <div class="input">
+                            <input class="input__widget" type="email" placeholder="ivan@yandex.ru" id="request-email">
+                        </div>
+                    </div>
+                    <div class="request__field">
+                        <label class="label" for="request-phone">
+                            Введите номер телефона
+                        </label>
+                        <div class="input">
+                            <input class="input__widget" type="tel" placeholder="+7 (812) 389-41-14" id="request-phone">
+                        </div>
+                    </div>
+                    <div class="request__submit">
+                        <button class="button button--submit" type="submit">Отправить заявку</button>
+                    </div>
+                    <div class="request__note">
+                        Мы свяжемся с вами в течении 15&nbsp;минут
+                    </div>
+                </form>
+            </div>
+        </div>
+
+        <div class="window mfp-hide" id="feedback">
+            <button class="window__close mfp-close" type="button">
+                <svg class="window__cross" xmlns="http://www.w3.org/2000/svg" width="26" height="26" viewBox="0 0 26 26">
+                    <path d="M11.584 12.998.27 24.31l1.414 1.414 11.314-11.313 11.314 11.313 1.414-1.414-11.314-11.313L25.726 1.684 24.312.27 12.998 11.583 1.684.27.27 1.684l11.314 11.314Z"/>
+                </svg>
+            </button>
+            <div class="request">
+                <h2 class="request__heading">
+                    Напишите нам
+                </h2>
+                <form class="request__form">
+                    <div class="request__field">
                         <label class="label" for="name">
                             Введите имя
                         </label>
                         <div class="input">
-                            <input class="input__widget" type="text" placeholder="Иван" id="name">
+                            <input class="input__widget" type="text" placeholder="Иван" id="feedback-name">
                         </div>
                     </div>
                     <div class="request__field">
@@ -386,7 +431,7 @@
                             Введите E-mail
                         </label>
                         <div class="input">
-                            <input class="input__widget" type="email" placeholder="ivan@yandex.ru" id="email">
+                            <input class="input__widget" type="email" placeholder="ivan@yandex.ru" id="feedback-email">
                         </div>
                     </div>
                     <div class="request__field">
@@ -394,11 +439,19 @@
                             Введите номер телефона
                         </label>
                         <div class="input">
-                            <input class="input__widget" type="tel" placeholder="+7 (812) 389-41-14" id="tel">
+                            <input class="input__widget" type="tel" placeholder="+7 (812) 389-41-14" id="feedback-tel">
+                        </div>
+                    </div>
+                    <div class="request__field">
+                        <label class="label" for="feedback-message">
+                            Сообщение
+                        </label>
+                        <div class="input">
+                            <textarea class="input__widget" placeholder="Введите текст обращения" id="feedback-message"></textarea>
                         </div>
                     </div>
                     <div class="request__submit">
-                        <button class="button button--submit" type="submit">Отправить заявку</button>
+                        <button class="button button--submit" type="submit">Отправить</button>
                     </div>
                     <div class="request__note">
                         Мы свяжемся с вами в течении 15&nbsp;минут
