--- a/src/layouts/projects.html
+++ b/src/layouts/projects.html
@@ -498,15 +498,15 @@
                     <path d="M11.584 12.998.27 24.31l1.414 1.414 11.314-11.313 11.314 11.313 1.414-1.414-11.314-11.313L25.726 1.684 24.312.27 12.998 11.583 1.684.27.27 1.684l11.314 11.314Z"/>
                 </svg>
             </button>
-            <div class="request">
-                <h2 class="request__heading">
+            <div class="form">
+                <h2 class="form__heading">
                     Заполните форму
                 </h2>
-                <div class="request__description">
+                <div class="form__description">
                     Заявка вас ни к чему не обязывает!<br class="hide-on-smartphone"> Вы можете отказаться в любой момент
                 </div>
-                <form class="request__form">
-                    <div class="request__field">
+                <form class="form__body">
+                    <div class="form__field">
                         <label class="label" for="name">
                             Введите имя
                         </label>
@@ -514,7 +514,7 @@
                             <input class="input__widget" type="text" placeholder="Иван" id="name">
                         </div>
                     </div>
-                    <div class="request__field">
+                    <div class="form__field">
                         <label class="label" for="email">
                             Введите E-mail
                         </label>
@@ -522,7 +522,7 @@
                             <input class="input__widget" type="email" placeholder="ivan@yandex.ru" id="email">
                         </div>
                     </div>
-                    <div class="request__field">
+                    <div class="form__field">
                         <label class="label" for="email">
                             Введите номер телефона
                         </label>
@@ -530,10 +530,10 @@
                             <input class="input__widget" type="tel" placeholder="+7 (812) 389-41-14" id="tel">
                         </div>
                     </div>
-                    <div class="request__submit">
+                    <div class="form__submit">
                         <button class="button button--submit" type="submit">Отправить заявку</button>
                     </div>
-                    <div class="request__note">
+                    <div class="form__note">
                         Мы свяжемся с вами в течении 15&nbsp;минут
                     </div>
                 </form>
